2020-11-09  Aakash Jain  <aakash_jain@apple.com>

        [build.webkit.org] remove unused imports from loadConfig.py
        https://bugs.webkit.org/show_bug.cgi?id=218718

        Reviewed by Dewei Zhu.

        * CISupport/build-webkit-org/loadConfig.py:

2020-11-09  Per Arne Vollan  <pvollan@apple.com>

        [macOS] System sounds should be played in the UI process
        https://bugs.webkit.org/show_bug.cgi?id=218405

        Reviewed by Darin Adler.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit/SystemBeep.mm: Added.
        (TEST):

2020-11-09  Per Arne Vollan  <pvollan@apple.com>

        [macOS] Set preference for overridden languages in the WebContent process after entering the sandbox.
        https://bugs.webkit.org/show_bug.cgi?id=218097

        Reviewed by Alexey Proskuryakov.

        * TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
        * TestWebKitAPI/Tests/WebKit/AccessibilityReduceMotion.mm:
        * TestWebKitAPI/Tests/WebKit/EnableAccessibility.mm:
        * TestWebKitAPI/Tests/WebKit/OverrideAppleLanguagesPreference.mm: Added.
        (TEST):
        * TestWebKitAPI/Tests/WebKit/PreferenceChanges.mm:

2020-11-09  Aakash Jain  <aakash_jain@apple.com>

        [build.webkit.org] Add python 3 support - part 3
        https://bugs.webkit.org/show_bug.cgi?id=218706

        Reviewed by Jonathan Bedard.

        * CISupport/Shared/transfer-archive-to-s3: Updated print method to be both python 2 and 3 compatible.
        * CISupport/built-product-archive: Ditto.
        * CISupport/delete-stale-build-files: Ditto.
        * CISupport/build-webkit-org/loadConfig.py: Removed unnecessary filter method.
        * CISupport/ews-build/loadConfig.py: Ditto.

2020-11-08  Lauro Moura  <lmoura@igalia.com>

        [GTK] REGRESSION(r267250) API test /webkit/WebKitWebView/usermedia-enumeratedevices-permission-check is crashing
        https://bugs.webkit.org/show_bug.cgi?id=216727
